--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 .idea/workspace.xml
 /log_sender.txt
 /log_receiver.txt
+/log_keyGen.txt
+/public_key.xml
+/private_key.xml
+__pycache__/
+private_key.xml
+/keys/
+keys/
+/log_keyUtils.txt
+log_keyUtils.txt
